// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render empty 1`] = `
Array [
  "workspaces.sectionTitle",
  <div
    className="!bg-blue-200 flex flex-1 m-16 !mt-0 rounded relative pt-6"
  >
    <div>
      <div
        className="flex flex-wrap align-start justify-center gap-4"
      >
        <button
          className="p-2 bg-slate-100 !m-4 w-[21.625rem] h-[7.5rem] flex flex-col justify-between overflow-hidden rounded-[0.938rem] border border-pr-grey border-dashed"
          disabled={false}
          id="createWorkspaceButton"
          onClick={[Function]}
        >
          <div
            className="flex flex-1 flex-row text-center content-center"
          >
            <div
              className="flex ml-3 mr-5 items-center justify-center"
            >
              <div
                className="ant-btn ant-btn-primary !h-[4.25rem] !w-[4.25rem] !p-0 !flex items-center justify-center"
              >
                <div />
              </div>
            </div>
            <div
              className="flex flex-col justify-center"
            >
              create.label
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.8.0
  </div>,
]
`;

exports[`should render some workspaces 1`] = `
Array [
  "workspaces.sectionTitle",
  <div
    className="flex mx-16 my-2 !mt-0 rounded relative pt-6"
  />,
  <div
    className="!bg-blue-200 flex flex-1 m-16 !mt-0 rounded relative pt-6"
  >
    <div>
      <div
        className="flex flex-wrap align-start justify-center gap-4"
      >
        <button
          className="p-2 bg-slate-100 !m-4 w-[21.625rem] h-[7.5rem] flex flex-col justify-between overflow-hidden rounded-[0.938rem] border border-pr-grey border-dashed"
          disabled={false}
          id="createWorkspaceButton"
          onClick={[Function]}
        >
          <div
            className="flex flex-1 flex-row text-center content-center"
          >
            <div
              className="flex ml-3 mr-5 items-center justify-center"
            >
              <div
                className="ant-btn ant-btn-primary !h-[4.25rem] !w-[4.25rem] !p-0 !flex items-center justify-center"
              >
                <div />
              </div>
            </div>
            <div
              className="flex flex-col justify-center"
            >
              create.label
            </div>
          </div>
        </button>
        <a
          className="p-2 bg-white !m-4 w-[21.625rem] h-[7.5rem] content-center flex flex-col justify-between overflow-hidden rounded-[0.938rem] border border-gray-200 border-solid"
          href="/workspaces/1"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex flex-1 flex-row text-center max-w-full"
          >
            <div
              className="flex ml-3 mr-5"
            >
              <div />
            </div>
            <div
              className="flex flex-1 flex-col items-start justify-center space-y-2 max-w-[250px]"
            >
              foo
              
              edit.label
            </div>
          </div>
        </a>
        <a
          className="p-2 bg-white !m-4 w-[21.625rem] h-[7.5rem] content-center flex flex-col justify-between overflow-hidden rounded-[0.938rem] border border-gray-200 border-solid"
          href="/workspaces/42"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          <div
            className="flex flex-1 flex-row text-center max-w-full"
          >
            <div
              className="flex ml-3 mr-5"
            >
              <div />
            </div>
            <div
              className="flex flex-1 flex-col items-start justify-center space-y-2 max-w-[250px]"
            >
              bar
              
              edit.label
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>,
  <div
    className="absolute bottom-1 right-1 text-gray mr-1 text-[10px]"
  >
    Prisme.ai v
    6.8.0
  </div>,
]
`;
